# vc-system

./: Cargo.toml  README.md
docs/: API.md
keys/: keys.json
src/: main.rs  schema.rs
src/holder/: api.rs  error.rs  holder.rs  mod.rs  storage.rs
src/issuer/: api.rs  error.rs  issuer.rs  mod.rs  schema.rs
src/models/: credential.rs  mod.rs  schema.rs  sd_jwt.rs
src/utils/: crypto.rs  error.rs  key_manager.rs  mod.rs  sd_jwt.rs
src/verifier/: api.rs  error.rs  mod.rs  verifier.rs
