[package]
name = "vc-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
actix-web = "4.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
thiserror = "1.0"
url = "2.5.2"
log = "0.4"
env_logger = "0.9"

[dev-dependencies]
actix-rt = "2.8.0"
